Change project title. Add custom props

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+/* CUSTOM PROPS */
+:root {
+  --body-bg: #f1f4ff;
+  --green: #4dc490;
+  --purple: #655af2;
+  --red: #f03535;
+  --text-color: #000;
+}
+
 /* GLOBAL */
 html {
   box-sizing: border-box;
@@ -21,7 +30,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
-  color: #222;
+  color: var(--text-color);
 }
 
 img {
