--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@
   --text-color: #000;
 }
 
+
 /* GLOBAL */
 html {
   box-sizing: border-box;
@@ -67,7 +68,7 @@ body {
   font-family: "Inter", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  background-color: #fff;
+  background-color: var(--body-bg);
   color: var(--text-color);
 }
 
@@ -91,4 +92,6 @@ img {
 /* MAIN-CONTENT */
 .main-content {
   flex-grow: 1;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
