--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,63 @@ img {
   padding-top: 80px;
   padding-bottom: 80px;
 }
+
+
+.intro-page {
+  display: flex;
+}
+
+.hero {
+  --text-color: #fff;
+
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 570px;
+  border-radius: 20px;
+  overflow: hidden;
+  color: var(--text-color);
+}
+
+.hero-main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 55px 60px;
+  background-color: #222;
+  background-image: url("../img/hero-bg.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.hero-badge {
+  padding: 5px 15px;
+  border: 1px solid var(--text-color);
+  margin-bottom: 60px;
+  border-radius: 41px;
+  font-size: 14px;
+  line-height: normal;
+  font-weight: 500;
+}
+
+.hero-heading {
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-size: 36px;
+  line-height: 46px;
+}
+
+.hero-text {
+  margin: 0;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.hero-bottom {
+  padding: 28px;
+  background-color: var(--green);
+  font-size: 19px;
+  text-align: center;
+}
